# MLOPS_LAB

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  app.py  create_test_image.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  api.py
cli/: __init__.py  cli.py
logic/: __init__.py  classifier.py
templates/: home.html
tests/: __init__.py  test_api.py  test_cli.py  test_logic.py
